@@ -16,6 +16,7 @@
   currently may return 302s on posts). This can be turned off by setting the .StrictRedirect property to true on the 
   GDataAuthRequestFactory. If it is turned off, the code will throw if a redirect is happening on an HTTP verb other than GET.
 - removed cookie handling. The code will handle cookies now without using the CookieContainer (one hurdle on the way to the CompactFramework Port).
+- Fixed persistence of "initialized" date values for udpated/published on the atom.entry. This resolves an issue with the Blogger. 
 
 == 1.0.7 ==
 - Added support for published-min/published-max as standard query parameters
